2005-05-23 01:34  bryce

	* doc/PLAN, lib/Document/Manager.pm, lib/Document/Object.pm,
	lib/Document/Repository.pm, scripts/doc_prop, scripts/ls_clipart,
	scripts/update_clipart: Getting keywords to work correctly (more or
	less).
	
	Filling in documentation for Document::Object and
	Document::Manager.
	
	Removing unimplemented functions.  Removing misc. warnings.

2005-05-16 01:00  bryce

	* ChangeLog, MANIFEST, META.yml, lib/Document/Manager.pm: Updating
	manifest

2005-05-15 17:38  bryce

	* Makefile.PL, doc/PLAN, lib/Document/Manager.pm,
	lib/Document/Object.pm, lib/Document/Repository.pm, scripts/dmsd,
	scripts/ls_docs, scripts/submit_clipart, scripts/update_clipart:
	Implementing state and keyword tracking

2005-04-24 10:33  bryce

	* lib/Document/Repository.pm: Defaulting _debug in D::Repository
	and stripping some warning messages

2005-04-24 10:24  bryce

	* META.yml, lib/Document/Manager.pm: Prepping for release

2005-04-24 10:18  bryce

	* MANIFEST: Updating manifest

2005-04-24 10:15  bryce

	* doc/PLAN, lib/Document/Manager.pm, lib/Document/Object.pm,
	scripts/doc_prop: Adding preliminary capability to store
	properties.  Initial creation of doc_prop, a script to view or
	update the properties of a given document.

2005-04-23 20:02  bryce

	* lib/Document/Manager.pm, lib/Document/Object.pm,
	lib/Document/Repository.pm, scripts/dmsd, scripts/ls_docs,
	scripts/submit_clipart: * Implementing dms as subclass of
	TicketAuth::DBI * Fixing some syntax errors * Hooking in
	Document::Object and fixing some issues * repo() -> _repo() *
	Adding _STATES and some prelim state tracking

2005-04-18 00:19  bryce

	* scripts/ls_docs: Fixing variable declarations

2005-04-18 00:08  bryce

	* MANIFEST, Makefile.PL: Removing dms script (obsolete)

2005-02-05 23:06  bryce

	* Makefile.PL, README, doc/CONCEPT, doc/PLAN, etc/dms.conf,
	lib/Document/Manager.pm, lib/Document/Object.pm,
	lib/Document/Repository.pm, scripts/dms, scripts/dmsd,