@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Document-Manager
-version:      0.30
+version:      0.35
 version_from: lib/Document/Manager.pm
 installdirs:  site
 requires:
@@ -14,6 +14,9 @@ requires:
     Getopt::Long:                  2
     Pod::Usage:                    1
     RDF::Simple:                   0
+    SOAP::Lite:                    0
+    SOAP::Lite::Utility:           0
+    SVG::Metadata:                 0
     WebService::TicketAuth:        0
 
 distribution_type: module
