@@ -15,8 +15,9 @@ use strict;
 our $opt_version;
 our $opt_help;
 our $opt_man;
-our $opt_resource = 'http://www.openclipart.org/Document/Manager';
-our $opt_server   = 'http://localhost:8012/';
+our $opt_resource = ($ENV{'DMS_RESOURCE'} or
+                     'http://www.openclipart.org/Document/Manager');
+our $opt_server   = ($ENV{'DMS_SERVER'} or 'http://localhost:8012/');
 our $opt_debug    = 0;
 
 # Handle commandline options
@@ -32,7 +33,7 @@ GetOptions(
 
 # Handle -V or --version
 if ($opt_version) {
-    print '$0: $Revision: 1.1.1.1 $', "\n";
+    print '$0: $Revision: 1.2 $', "\n";
     exit 0;
 }
 
@@ -152,7 +153,7 @@ modify it under the same terms as Perl itself.
 
 =head1 REVISION
 
-Revision: $Revision: 1.1.1.1 $
+Revision: $Revision: 1.2 $
 
 =cut
 
