@@ -1,4 +1,4 @@
-#!/usr/bin/perl -w
+#!/usr/bin/perl
 
 #use lib "/projects/clipart/share/perl/5.8.3/";
 #use lib "/projects/clipart/lib/perl/5.8.3/";
@@ -15,8 +15,9 @@ use strict;
 our $opt_version;
 our $opt_help;
 our $opt_man;
-our $opt_resource = 'http://www.openclipart.org/Document/Manager';
-our $opt_server   = 'http://localhost:8012/';
+our $opt_resource = ($ENV{'DMS_RESOURCE'} or 
+                     'http://www.openclipart.org/Document/Manager');
+our $opt_server   = ($ENV{'DMS_SERVER'} or 'http://localhost:8012/');
 our $opt_debug    = 0;
 
 # Handle commandline options
@@ -32,7 +33,7 @@ GetOptions(
 
 # Handle -V or --version
 if ($opt_version) {
-    print '$0: $Revision: 1.1.1.1 $', "\n";
+    print '$0: $Revision: 1.3 $', "\n";
     exit 0;
 }
 
@@ -68,8 +69,11 @@ sub main {
 
     use Data::Dumper;
     printf("%-8s  %-24s  %-8s  %-8s  %-12s\n", 'ID', 'Title', 'State', 'Size', 'Date');
+    my $num_docs = 0;
     foreach my $doc_id (@{$response->result}) {
 	next unless $doc_id;
+	$num_docs++;
+
 	$response = $soap->properties($dms, $doc_id);
 	soap_assert($response);
 	my $properties = $response->result;
@@ -82,6 +86,19 @@ sub main {
 	    }
 	    next;
 	}
+
+        # PRINt Dumper($properties,$response->result,$response );
+
+        # print Dumper( $response->{'_content'}, $response-> );
+
+        # foreach my $field ($response)
+	# while ( my $field = $response->result )
+	# {
+        #    print Dumper($field);
+	# }
+
+
+	# print "$doc_id $properties";
 	printf("%08d  %-24s  %-8s  %-8s  %-12s\n", 
 	       $doc_id, 
 	       ($properties->{'title'} or ''), 
@@ -89,6 +106,9 @@ sub main {
 	       ($properties->{'size'} or ''), 
 	       ($properties->{'date'} or '')
 	       );
+    }
+    if ($num_docs == 0) {
+	print "No documents\n";
     }
     return 0;
 }
@@ -156,7 +176,7 @@ modify it under the same terms as Perl itself.
 
 =head1 REVISION
 
-Revision: $Revision: 1.1.1.1 $
+Revision: $Revision: 1.3 $
 
 =cut
 
