@@ -7,6 +7,7 @@ use strict;
 use Pod::Usage;
 use Getopt::Long;
 use File::Find;
+use File::Spec::Functions ("abs2rel", "rel2abs");
 use SOAP::Lite;
 use MIME::Base64 qw(encode_base64);
 
@@ -14,8 +15,9 @@ use MIME::Base64 qw(encode_base64);
 our $opt_version;
 our $opt_help;
 our $opt_man;
-our $opt_resource = 'http://www.openclipart.org/Document/Manager';
-our $opt_server   = 'http://localhost:8012/';
+our $opt_resource = ($ENV{'DMS_RESOURCE'} or
+                     'http://www.openclipart.org/Document/Manager');
+our $opt_server   = ($ENV{'DMS_SERVER'} or 'http://localhost:8012/');
 our $opt_debug    = 0;
 
 Getopt::Long::Configure ("bundling", "no_ignore_case");
@@ -30,7 +32,7 @@ GetOptions(
 
 # Handle -V or --version
 if ($opt_version) {
-    print '$0: $Revision: 1.1.1.1 $', "\n";
+    print '$0: $Revision: 1.3 $', "\n";
     exit 0;
 }
 
@@ -58,7 +60,7 @@ sub main {
     }
 
 
-    find({ wanted => \&process_files }, @ARGV);
+    find({ wanted => \&process_files, no_chdir => 1 }, @ARGV);
 
     return 0;
 }
@@ -69,6 +71,7 @@ sub process_files {
 	my $buf = '';
 
 	# Load data from the file, encode it, and store in $content
+	print "Opening file ".$File::Find::name."\n";
 	open(FILE, $File::Find::name) 
 	    or die "Could not open file '$File::Find::name':  $!\n";
 	while (read(FILE, $buf, 60*57)) {
@@ -198,6 +201,6 @@ modify it under the same terms as Perl itself.
 
 =head1 REVISION
 
-Revision: $Revision: 1.1.1.1 $
+Revision: $Revision: 1.3 $
 
 =cut
