@@ -4,28 +4,24 @@ use strict;
 my @scripts;
 
 BEGIN {
-@scripts = qw(
-scripts/get_docs
-scripts/dmsd
-scripts/repo_add
-scripts/ls_docs
-scripts/repo_export
-scripts/repo_get
-scripts/repo_init
-scripts/repo_ls
-scripts/repo_put
-scripts/stat_docs
-scripts/submit_doc
-scripts/update_doc
-);
+@scripts = `find scripts/ -type 'f' | grep -v 'CVS' | grep -v '*~'`;
 }
 
 use Test::More tests => 1+$#scripts;
 
 foreach my $script (@scripts) {
     next unless $script;
-    `perl -c $script`;
-    ok ( $?==0, "Verifying compilation of '$script'") or
-       diag("Script '$script' failed");
+    my $file_type = `file $script`;
+    if ($file_type =~ /Bourne shell script/) {
+        `bash -n $script`;
+        ok ( $?==0, "Verifying compilation of '$script'") or
+           diag("Bash script '$script' failed");
+    } elsif ($file_type =~ /perl script/) {
+        `perl -c $script`;
+        ok ( $?==0, "Verifying compilation of '$script'") or
+            diag("Perl script '$script' failed");
+    } else {
+        ok ( 1==1, "Unknown script type '$file_type'... skipping");
+    }
 }
 
